--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,8 +37,8 @@ include:
     file: '/linux-x64.yml'
 
   # MacOS 64-bit
-  - project: 'libretro-infrastructure/ci-templates'
-    file: '/osx-x64.yml'
+  #- project: 'libretro-infrastructure/ci-templates'
+  #file: '/osx-x64.yml'
 
   ################################## CELLULAR ################################
   # Android
@@ -81,10 +81,10 @@ libretro-build-linux-x64-hw:
     - .core-defs-hw-lightrec
 
 # MacOS 64-bit
-libretro-build-osx-x64:
-  extends:
-    - .libretro-osx-x64-make-default
-    - .core-defs
+#libretro-build-osx-x64:
+#extends:
+#- .libretro-osx-x64-make-default
+#- .core-defs
 
 ################################### CELLULAR #################################
 # Android ARMv7a
