--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,14 +31,14 @@ include:
   # Windows 64-bit
   - project: 'libretro-infrastructure/ci-templates'
     file: '/windows-x64-mingw.yml'
+    
+  # Windows 32-bit
+  - project: 'libretro-infrastructure/ci-templates'
+    file: '/windows-i686-mingw.yml'
 
   # Linux 64-bit
   - project: 'libretro-infrastructure/ci-templates'
     file: '/linux-x64.yml'
-
-  # MacOS 64-bit
-  #- project: 'libretro-infrastructure/ci-templates'
-  #file: '/osx-x64.yml'
 
   ################################## CELLULAR ################################
   # Android
