Move lightning.h and lightrec config.h to fix subrepos
This allows deps/light(rec/ning) to be free of any local changes
which allows more automated merging of any updates, and centralizes
the location of locally created files, these should be regenerated
whenever changes occur in thier subrepo files:

config.h <- deps/lightrec/config.h.cmakein

lightning.h <- deps/lightning/include/lightning.h.in

Also add the defines to keep lightrec optimizations enabled by default

--- a/Makefile.common
+++ b/Makefile.common
@@ -183,7 +183,8 @@ ifeq ($(HAVE_LIGHTREC), 1)
    endif
 
    INCFLAGS += -I$(DEPS_DIR)/lightning/include \
-               -I$(DEPS_DIR)/lightrec
+               -I$(DEPS_DIR)/lightrec \
+               -I$(CORE_DIR)/lightning-lightrec-include
 endif
 
 ifneq ($(HAVE_GRIFFIN), 1)
