--- a/Makefile.common
+++ b/Makefile.common
@@ -36,7 +36,8 @@ ZLIB_SOURCES_C = \
 		 $(ZLIB_DIR)/crc32.c \
 		 $(ZLIB_DIR)/inffast.c \
 		 $(ZLIB_DIR)/inflate.c \
-		 $(ZLIB_DIR)/inftrees.c
+		 $(ZLIB_DIR)/inftrees.c \
+		 $(ZLIB_DIR)/zutil.c
 
 ifeq ($(HAVE_OPENGL), 1)
    ifeq ($(GLES), 1)
