lightrec: Adjust to lightrec API changes and HAVE_MMAP for lightning
Fix bios freeze with lightrec, AssertIRQ must change lightrec's CAUSE too

cleanup unused cop0 functions

--- a/Makefile.common
+++ b/Makefile.common
@@ -160,6 +160,7 @@ endif
 
 ifeq ($(HAVE_LIGHTREC), 1)
    FLAGS += -DHAVE_LIGHTREC
+   FLAGS += -DHAVE_MMAP
 
    ifeq ($(LIGHTREC_LOG_LEVEL),)
        FLAGS += -DLOG_LEVEL=3 \
