GLES 3.0 Support on HW Renderer
updated makefiles for:
- android
- ios
- emscripten
- rpi4

tested on emscripten, GLES3 must be explicitly enabled for android and ios

fixed some things in glsm (libretro-common)

colors are not 100% perfect on GLES3 due to it not including the 1555 ABGR color format. GLES3 uses 5551 instead.

--- a/Makefile.common
+++ b/Makefile.common
@@ -40,11 +40,15 @@ ZLIB_SOURCES_C = \
 		 $(ZLIB_DIR)/zutil.c
 
 ifeq ($(HAVE_OPENGL), 1)
-   ifeq ($(GLES), 1)
+   ifeq ($(GLES3), 1)
+      GLFLAGS  := -DHAVE_OPENGLES -DHAVE_OPENGLES3
+      CFLAGS   += $(GLFLAGS)
+      CXXFLAGS += $(GLFLAGS)
+      SOURCES_C += $(LIBRETRO_COMM_DIR)/glsym/glsym_es3.c
+   else ifeq ($(GLES), 1)
       GLFLAGS  := -DHAVE_OPENGLES -DHAVE_OPENGLES2
       CFLAGS   += $(GLFLAGS)
       CXXFLAGS += $(GLFLAGS)
-
       SOURCES_C += $(LIBRETRO_COMM_DIR)/glsym/glsym_es2.c
    else
       GLFLAGS   := -DHAVE_OPENGL -DCORE
