Lightrec: enable codebuffer option, fix Windows, move/cleanup headers
Codebuffer is much faster due to lightrec's 32-bit LUT optimization

Moved lightning.h to lightning-actual.h and made lightning.h include lightning-actual.h and define HAVE_MMAP for lightning, instead of defining in the Makefile which applied it to other parts of beetle, causing issues on Windows in libretro-common/vfs

--- a/Makefile.common
+++ b/Makefile.common
@@ -160,7 +160,6 @@ endif
 
 ifeq ($(HAVE_LIGHTREC), 1)
    FLAGS += -DHAVE_LIGHTREC
-   FLAGS += -DHAVE_MMAP
 
    ifeq ($(LIGHTREC_LOG_LEVEL),)
        FLAGS += -DLOG_LEVEL=3 \
@@ -377,7 +376,8 @@ ifeq ($(HAVE_LIGHTREC), 1)
                   $(DEPS_DIR)/lightrec/memmanager.c \
                   $(DEPS_DIR)/lightrec/optimizer.c \
                   $(DEPS_DIR)/lightrec/reaper.c \
-                  $(DEPS_DIR)/lightrec/regcache.c
+                  $(DEPS_DIR)/lightrec/regcache.c \
+                  $(DEPS_DIR)/lightrec/tlsf/tlsf.c
 
    ifeq ($(THREADED_RECOMPILER), 1)
       ifeq ($(DEBUG), 0)
