--- a/Makefile.common
+++ b/Makefile.common
@@ -195,6 +195,8 @@ ifeq ($(HAVE_LIGHTREC), 1)
                -I$(DEPS_DIR)/lightrec \
                -I$(CORE_DIR)/include \
                -include $(CORE_DIR)/include/debug.h
+
+   SOURCES_CXX += $(CORE_EMU_DIR)/cpu_lightrec.cpp
 endif
 
 ifneq ($(HAVE_GRIFFIN), 1)
